<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.farminginventorytracker.MainActivity" >

      <item
          android:id="@+id/action_add_crop"
          android:title="@string/add_crop_actionbar"
          app:showAsAction="never" />
      <item
          android:id="@+id/action_add_supply"
          android:title="@string/add_supply_actionbar"
          app:showAsAction="never" />
      <item
          android:id="@+id/action_add_tool"
          android:title="@string/add_tool_actionbar"
          app:showAsAction="never" />
      <item
          android:id="@+id/action_change_font"
          android:title="@string/change_font_actionbar"
          app:showAsAction="never" />
      <item
          android:id="@+id/action_home"
          android:title="@string/home_actionbar"
          android:icon="@drawable/ic_action_home"
          app:showAsAction="always" />
</menu>