<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSupplyFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/supply_type"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/supplyTypeSpinner"
                android:layout_width="130dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="60dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/amount"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:text="Amount:" />

            <EditText
                android:id="@+id/supplyAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="Enter amount"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#5A5A5A"
                android:textColorHint="#959595" />

            <Button
                android:id="@+id/addSupplyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="Add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/add_a_new_type"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/supplyTypeNew"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="New supply"
                android:inputType="textPersonName"
                android:textColorHint="#959595" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>